2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
	warnings from gcc.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/compile.c (snarf_char_class): Reverse order of conjuncts
	so that "delim" is not used uninitialized.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/utils.c (panic): Remove declaration of unused local, "fd".

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
	warnings from gcc.  Avoid shadowing global "pipe".

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* autoboot.conf (gnulib_modules): Add stat-macros and pathmax.

2007-10-25  Paolo Bonzini  <bonzini@gnu.org>
	    Mike Frysinger   <vapier@gentoo.org>

	* doc/sed.x (q, Q): Document argument.
	* configure.ac: Remove texi2html checks.
	* doc/Makefile.am: Remove rules for sed.html, always distribute it.

2007-08-14  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (open_next_file): Follow symlink here...
	(closedown): ... not here.

2007-06-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/mbcs.c: Upgrade to GPLv3.
	* sed/regexp.c: Upgrade to GPLv3.
	* sed/sed.c: Upgrade to GPLv3.
	* sed/sed.h: Upgrade to GPLv3.
	* sed/utils.c: Upgrade to GPLv3.
	* sed/utils.h: Upgrade to GPLv3.
	* sed/compile.c: Upgrade to GPLv3.
	* sed/execute.c: Upgrade to GPLv3.
	* sed/fmt.c: Upgrade to GPLv3.

2007-03-01  Masatake YAMATO  <jet@gyve.org>  (tiny change)

	* sed/compile.c (compile_program): Accept 0,/REGEXP/ address
	specification only if --posix is not specified.

2007-01-26  Paolo Bonzini  <bonzini@gnu.org>

        * sed/compile.c: Fix warnings.
        * sed/execute.c: Fix warnings.

	* sed/compile.c (check_final_program): Don't set text if the
	pending_text is initialized but empty.
	* sed/execute.c (output_line): Don't print text if it is NULL.
	* tests/Makefile.am (TESTS): Add insert.
	* tests/Makefile.tests (insert): New.